try to fix button size on mobile.

--- a/style.css
+++ b/style.css
@@ -181,6 +181,14 @@ p {
         border-bottom-right-radius: var(--corner-radius);
     }
 
+    .btn {
+        height: 3em;
+        font-family: var(--font-f1);
+        font-size: 2em;
+        margin: 60px 60px 60px 0px;
+        border-radius: 1.5em;
+    }
+
   }
 
 .attribution {
